components/shared/app/assets/stylesheets/shared/dashboard.css.scss
@media screen and (min-width: $screen-md-min) {
  .remove-grid-md > * {
    float: none; width: auto;
  }
}

.dashboard-description{
  margin-bottom: 20px !important;
}

.label-new-news{
  margin-left: 10px !important;
}

.dashboard {
  margin-top: 40px;

  .headline {
    margin-bottom: 20px;

    h1 {
      font-variant: small-caps;
    }

    p {
      @extend .text-muted;

      font-style: italic;
    }
  }

  .links {
    a {
      vertical-align: middle;
      background-color: #eceff4;
      float: left;
      position: relative;
      height: 110px;
      display: table-cell;
      width: 100%;
      margin-bottom: 20px;
      text-decoration: none;

      .link-icon {
        text-align: center;
        color: #fff;
        background-color: $dashboard-link-bg-color;
        position: absolute;
        width: 110px;
        height: 110px;
        line-height: 110px;
        font-size: 3em;
        i {
          margin: 0;
          padding: 0;
          top: 50%;
          margin-top: -50%;
        }
      }

      .link-icon-questions {
        background-color: $dashboard-link-questions-bg-color;
      }

      .link-icon-questions-followed {
        background-color: $dashboard-link-questions-followed-bg-color;
      }

      .link-icon-answers {
        background-color: $dashboard-link-answers-bg-color;
      }

      .link-icon-answers-followed {
        background-color: $dashboard-link-answers-followed-bg-color;
      }

      .link-icon-comments {
        background-color: $dashboard-link-comments-bg-color;
      }

      .link-icon-comments-followed {
        background-color: $dashboard-link-comments-followed-bg-color;
      }

      .link-text {
        padding: 7px;
        color: #877676;
        text-align: left;
        margin-left: 110px;
        height: 100%;

        .number {
          text-align: center;
          font-size: 2.2em;
        }

        .description {
          text-transform: uppercase;
          text-align: center;
          font-size: 0.8em;
        }
      }
    }
  }
}

